[package]
name = "tabletdb"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A database of auxiliary information about graphics tablets"
keywords = ["tablet", "wacom", "cli", "linux", "wayland"]

[dependencies]
bitflags = "2.8.0"
configparser = "3.1.0"
log = "0.4.26"
thiserror = "2.0.11"
xdg = "2.5.2"
